--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -502,8 +502,15 @@
     </property>
     <addaction name="actionGrafo"/>
    </widget>
+   <widget class="QMenu" name="menuAlgoritmos">
+    <property name="title">
+     <string>Algoritmos</string>
+    </property>
+    <addaction name="actionRecorridos_en_profundidad_amplitud"/>
+   </widget>
    <addaction name="menuArchivo"/>
    <addaction name="menuVer"/>
+   <addaction name="menuAlgoritmos"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionAbrir">
@@ -528,6 +535,11 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+G</string>
+   </property>
+  </action>
+  <action name="actionRecorridos_en_profundidad_amplitud">
+   <property name="text">
+    <string>Recorridos en profundidad/amplitud</string>
    </property>
   </action>
  </widget>
